fix: change title in recipe
Adds a descriptive title to the YAML configuration file in the deployment scripts to improve readability and context.

--- a/src/recipe.yml
+++ b/src/recipe.yml
@@ -1,4 +1,5 @@
 name: jjideenschmiede/github-last-matching-ref
+title: Fetch Latest GitHub Ref
 version: 1.0.0
 description: |
   Fetches the latest Git reference (branch or tag) from a GitHub repository
